5_storage/5_2_nfs/app_with_nfs2/service-nfs.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs-test-service2
  namespace: nfs-test
  labels:
    app: nfs-test-deployment2
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: nfs-test-deployment2
